# entrance_guard

./: .gitignore  README.md
.github/workflows/: ci.yml
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
ui/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
ui/e2e/src/: app.e2e-spec.ts
ui/src/: index.html
ui/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  app.service.ts  http-error-handler.service.ts  message.service.ts
ui/src/app/messages/: messages.component.html
web-front/: README.md  angular.json  package-lock.json  package.json
web-front/e2e/src/: app.e2e-spec.ts
web-front/src/: index.html
web-front/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.data.ts  app.module.ts  app.service.ts
web-front/src/app/messages/: messages.component.ts
web-front/src/environments/: environment.ts
