[package]
name = "passports_server"
version = "0.1.0"
authors = ["June <liumy.f@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = "2"
actix-cors = "0.2"
actix-files = "0.2"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0"

[dependencies.reqwest]
version = "0.10"
default-features = false
features = ["json", "rustls-tls"]